# gitviz

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  security_best_practices_report.md
.github/scripts/: build_deb.sh  create_release_artifacts.sh  publish_apt_repo.sh  render_homebrew_formula.sh  update_homebrew_tap.sh
.github/workflows/: ci.yml  package-smoke.yml  prelaunch-checklist.yml  release-dry-run.yml  release.yml
.playwright-cli/: page-2026-02-24T18-47-41-351Z.yml  page-2026-02-24T18-48-07-553Z.yml  page-2026-02-24T18-54-38-975Z.yml
docs/: publishing-bootstrap.md  release-checklist.md
packaging/homebrew/: gitviz.rb
packaging/npm/: README.md  package.json
packaging/npm/scripts/: postinstall.js
scripts/: check_landing_page.sh  check_release_secrets.sh  verify_release_workflow_gates.sh  verify_version_alignment.sh
src/: app.rs  cli.rs  main.rs
src/git/: commands.rs  mod.rs  model.rs  parser.rs
src/graph/: lanes.rs  mod.rs  render.rs
src/ui/: mod.rs  view.rs  widgets.rs
src/util/: fmt.rs  mod.rs
