[package]
name = "gitviz"
version = "0.1.0"
edition = "2021"
description = "Terminal Git repository visualizer"

[[bin]]
name = "gitviz"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"

[profile.release]
opt-level = 3
